# supercollider

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  README_LINUX.md  README_WINDOWS.md
.github/workflows/: actions-test.yml  actions.yml  build_linux.yml  build_macos.yml  build_windows.yml  test_linux.yml  test_macos.yml
.travis/: before-install-osx.sh  before-script-osx.sh  qpm-test.sh
HelpSource/: Help.schelp
HelpSource/Classes/: DrawGrid.schelp  GridLines.schelp  SoundFileView.schelp  String.schelp  UGen.schelp  UnitTest.schelp
QtCollider/: CMakeLists.txt  Common.cpp  QcCallback.hpp  factories.cpp  interface.cpp  metatype.cpp  type_codec.hpp
QtCollider/primitives/: prim_QQuartzComposer.mm  prim_misc.cpp
QtCollider/widgets/: QcQuartzComposerView.h  QcQuartzComposerView.mm  QcScope.cpp  QcScope.h  QcScopeShm.cpp  QcScopeShm.h  QcWebView.cpp  QcWebView.h
cmake_modules/: BundleUtilitiesWithRPath.cmake  FindPortaudio.cmake  FindReadline.cmake  FindSndfile.cmake  GetSCVersion.cmake  MacAppFolder.cmake  VerifyApp.cmake
common/: SC_Filesystem_macos.cpp  SC_Filesystem_win.cpp  SC_Win32Utils.cpp
editors/sc-ide/: CMakeLists.txt
external_libraries/portaudio/: CMakeLists.txt
include/plugin_interface/: SC_Graph.h  SC_SndBuf.h  SC_sndfile_stub.h
lang/: CMakeLists.txt
lang/LangPrimSource/: PyrPrimitive.cpp  PyrStringPrim.cpp  SC_CoreMIDI.cpp
lang/LangSource/: SC_TerminalClient.cpp  SC_TerminalClient.h
package/: ds_store
server/plugins/: CMakeLists.txt
server/scsynth/: CMakeLists.txt  SC_ComPort.cpp  SC_CoreAudio.cpp  SC_GraphDef.cpp  SC_PortAudio.cpp  SC_Time.hpp
server/supernova/: CMakeLists.txt
testsuite/classlibrary/: TestBuffer_Server.sc  TestBus.sc  TestCoreUGens.sc  TestDoneActions.sc  TestEnvGen_server.sc  TestFilterUGens.sc  TestFunction.sc  TestIOUGens.sc  TestIndexUGenRates.sc  TestLinkClock.sc  (+26 more)
testsuite_scripts/: gha_test_run_all.json
(+39 files in other folders)
